Fixed submit trial accordion spacings
git-svn-id: https://ncisvn.nci.nih.gov/svn/coppa/trunk/code@16752 553898ca-32d5-487a-af8b-6cf4ca579ab4

--- a/reg-web/src/webapp/styles/ctrp.css
+++ b/reg-web/src/webapp/styles/ctrp.css
@@ -962,7 +962,7 @@ h1.heading {
 	margin-bottom: 0;
 }
 .accordion-group .accordion + .accordion {
-	margin-top: 5px;
+	margin-top: 0px;
 }
 .accordion-default {
 	border-color: #DDDDDD;
